--- a/studio/public/templates/studio.html
+++ b/studio/public/templates/studio.html
@@ -14,9 +14,7 @@
 
         <div class="row">
 
-            <diagram view-model="diagramViewModel"
-                     style="width: 100%; height: 1000px;">
-            </diagram>
+            <diagram view-model="diagramViewModel"></diagram>
 
         </div>
     </div>
