--- a/studio/public/scripts/components/diagram/diagram.html
+++ b/studio/public/scripts/components/diagram/diagram.html
@@ -13,7 +13,7 @@
             <div class="configuration-parameter"
                  ng-repeat="parameter in configurationBlock.block.data.parameters">
                 <span>{{parameter.name}}</span>
-                <input type="text" value="{{parameter.value}}" />
+                <input type="text" ng-model="parameter.value" />
             </div>
         </div>
 
