--- a/studio/app/views/index.scala.html
+++ b/studio/app/views/index.scala.html
@@ -18,21 +18,63 @@
     <div id="studio-wrapper"
     ng-app="analyticsApp"
     ng-controller="analyticsController"
-    ng-class="{'show-nav': showNav}"
+    ng-class="{'show-nav': showNav, 'show-props': showProps}"
     draggable>
 
-        <div id="diagrams-menu">
-
-            <h2>Diagrams</h2>
-
+        <div id="diagrams-menu" class="sidebar-offcanvas">
+            <div class="wrapper">
+                <div class="col-md-12">
+                    <h3>Diagrams</h3>
+                    <ul class="nav nav-pills nav-stacked custom" ng-model="diagrams" ng-repeat="d in diagrams" ng-click="loadDiagram(d.name)">
+                        <li>
+                            <a class="glyphicon glyphicon-picture" href="#"> {{d.name}}</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md-12">
+                <p>
+                    <button type="button" class="btn btn-success" ng-click="createDiagram()" style="width: 100%">
+                        <i class="glyphicon glyphicon-new-window"></i>
+                        <span class="navbar-btn-text">Create New</span>
+                    </button>
+                </p>
+            </div>
         </div>
 
         <div class="navbar">
             <div class="container-fluid">
-                <button type="button" class="btn btn-default navbar-btn" ng-click="toggleDiagrams()"><i class="fa fa-bars"></i></button>
-                <button type="button" class="btn btn-default navbar-btn" ng-click="toggleLibrary()">
-                    <i class="fa fa-th"></i><span class="navbar-btn-text">Library</span><i class="fa fa-caret-down"></i>
+                <button type="button" class="btn btn-default navbar-btn" ng-click="toggleDiagrams()">
+                    <i class="fa fa-bars"></i>
                 </button>
+                <button type="button" class="btn btn-default navbar-btn" ng-click="toggleLibrary()">
+                    <i class="fa fa-th"></i>
+                    <span class="navbar-btn-text">Library</span>
+                    <i class="fa fa-caret-down"></i>
+                </button>
+                <button type="button" class="btn btn-default navbar-btn pull-right dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                    <i class="glyphicon glyphicon-picture"></i>
+                    <span class="navbar-btn-text">{{diagramViewModel.data.name}}</span>
+                    <i class="fa fa-caret-down"></i>
+                </button>
+                <ul class="dropdown-menu pull-right" role="menu">
+                    <li ng-show="canShowMenuItems" ng-click="saveDiagram()">
+                        <a class="glyphicon glyphicon-save" href="#"> Save</a>
+                    </li>
+                    <li ng-show="canShowMenuItems" ng-click="evaluateDiagram()">
+                        <a class="glyphicon glyphicon-play" href="#"> Evaluate</a>
+                    </li>
+                    <li ng-show="canShowMenuItems" ng-click="downloadDiagram()">
+                        <a class="glyphicon glyphicon-cloud-download" href="#"> Download</a>
+                    </li>
+                    <li ng-show="canShowMenuItems" ng-click="deleteDiagram()">
+                        <a class="glyphicon glyphicon-trash" href="#"> Delete</a>
+                    </li>
+                    <li ng-show="canShowMenuItems" class="divider"></li>
+                    <li ng-click="toggleDiagramProperties()">
+                        <a class="glyphicon glyphicon-cog" href="#"> Edit</a>
+                    </li>
+                </ul>
             </div>
         </div>
 
@@ -79,6 +121,28 @@
         </div>
 
         <ng-view></ng-view>
+
+        <div id="properties-menu" class="sidebar-offcanvas">
+            <div class="wrapper">
+                <div class="col-md-12">
+                    <h3>Properties</h3>
+                    <span>Name</span>
+                    <input type="text" ng-model="diagramViewModel.data.name" style="width: 100%" />
+                    <span>Description</span>
+                    <input type="text" ng-model="diagramViewModel.data.description" style="width: 100%" />
+                    <span>Owner</span>
+                    <input type="text" ng-model="diagramViewModel.data.owner" style="width: 100%" />
+                </div>
+            </div>
+            <div class="col-md-12">
+                <p>
+                    <button type="button" class="btn btn-success" ng-click="toggleDiagramProperties()" style="width: 100%">
+                        <i class="glyphicon glyphicon-log-out"></i>
+                        <span class="navbar-btn-text">Done</span>
+                    </button>
+                </p>
+            </div>
+        </div>
 
     </div>
 
