--- a/studio/public/stylesheets/site.css
+++ b/studio/public/stylesheets/site.css
@@ -2,21 +2,90 @@
  * Base structure
  */
 
-html, body { height: 100%; }
+html, body {
+    height: 100%;
+}
 
-body { font-family: Roboto, arial, sans-serif; background-color: #e5e5e5; overflow: hidden; }
+body {
+    font-family: Roboto, arial, sans-serif;
+    background-color: #e5e5e5;
+    overflow: hidden;
+}
 
-#studio-wrapper { width: 100%; height: 100%; -webkit-transform: translateX(0); transform: translateX(0); -webkit-transition: .3s ease all; transition: .3s ease all; }
+#studio-wrapper {
+    width: 100%;
+    height: 100%;
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    -webkit-transition: .3s ease all;
+    transition: .3s ease all;
+}
 
-.navbar { background-color: #f5f5f5; border: 0; }
-.navbar-btn-text { margin: 0 5px 0 5px; }
+.navbar {
+    background-color: #f5f5f5;
+    border: 0;
+}
 
-#studio-canvas { overflow-y: scroll; height: 100%; }
+.navbar-btn-text {
+    margin: 0 5px 0 5px;
+}
 
-#studio-wrapper.show-nav { -webkit-transform: translateX(200px); transform: translateX(200px); }
+#studio-canvas {
+    overflow-y: scroll;
+    height: 100%;
+}
 
-#diagrams-menu { position: absolute; left: -200px; top: 0px; background-color: #d9d9d9; width:200px; height: 100% }
+#studio-wrapper.show-nav {
+    -webkit-transform: translateX(200px);
+    transform: translateX(200px);
+}
 
+#diagrams-menu {
+    position: absolute;
+    left: -200px;
+    top: 0px;
+    background-color: #d9d9d9;
+    width:200px;
+    height: 100%;
+    overflow-y:auto;
+    overflow-x:hidden;
+}
+
+.nav > li > a:hover {
+    background-color: lightgray;
+}
+
+.nav > li > a:active,
+.nav > li > a:focus {
+    background-color: darkgray;
+}
+
+.nav > li > a {
+    color: black;
+}
+
+.wrapper {
+    min-height: 100%;
+    height: auto !important;
+    height: 100%;
+    margin: 0 auto -155px; /* the bottom margin is the negative value of the footer's height */
+}
+
+#studio-wrapper.show-props {
+    -webkit-transform: translateX(-200px);
+    transform: translateX(-200px);
+}
+
+#properties-menu {
+    position: absolute;
+    right: -200px;
+    top: 0px;
+    background-color: #d9d9d9;
+    width:200px;
+    height: 100%;
+    overflow-y:auto;
+    overflow-x:hidden;
+}
 
 #navigation {
     position: absolute;
