--- a/studio/app/views/index.scala.html
+++ b/studio/app/views/index.scala.html
@@ -54,7 +54,7 @@
                 </button>
                 <button type="button" class="btn btn-default navbar-btn pull-right dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
                     <i class="glyphicon glyphicon-picture"></i>
-                    <span class="navbar-btn-text">{{diagramViewModel.data.name}}</span>
+                    <span ng-cloak class="navbar-btn-text">{{diagramViewModel.data.name}}</span>
                     <i class="fa fa-caret-down"></i>
                 </button>
                 <ul class="dropdown-menu pull-right" role="menu">
