--- a/studio/public/stylesheets/diagram.css
+++ b/studio/public/stylesheets/diagram.css
@@ -32,6 +32,15 @@ rect.block-config{ fill: #1f77b4; }
  * Block Configuration
  */
 
+#block-rename {
+    position: absolute;
+}
+
+#rename-input {
+    width: 190px;
+    text-align: center;
+}
+
 #block-configuration { position: absolute;
     width: 200px;
     min-height: 60px;
