--- a/studio/public/templates/studio.html
+++ b/studio/public/templates/studio.html
@@ -14,7 +14,7 @@
 
         <div class="row">
 
-            <diagram view-model="diagramViewModel"></diagram>
+            <diagram view-model="diagramViewModel" definitions="definitions" service="service"></diagram>
 
         </div>
     </div>
