--- a/studio/public/stylesheets/diagram.css
+++ b/studio/public/stylesheets/diagram.css
@@ -41,7 +41,8 @@ rect.block-config{ fill: #1f77b4; }
     text-align: center;
 }
 
-#block-configuration { position: absolute;
+#block-configuration {
+    position: absolute;
     width: 200px;
     min-height: 60px;
     background-color: white;
@@ -51,7 +52,14 @@ rect.block-config{ fill: #1f77b4; }
     box-shadow: 0px 6px 12px rgba(0,0,0,0.175);
 }
 
-.block-configuration-content { position: absolute; top: 0; left: 0; width: 100%; height: 100%; padding: 8px; }
+.block-configuration-content {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 8px;
+}
 
 .arrowUpper { position: absolute;
     top: 25px;
@@ -80,6 +88,15 @@ rect.block-config{ fill: #1f77b4; }
 .configuration-parameter { margin-bottom: 8px; }
 .configuration-parameter span { display: block; }
 .configuration-parameter input { display: block; width: 100%; }
+
+.dropdown.dropdown-scroll .dropdown-menu {
+    max-height: 300px;
+    width: auto;
+    overflow: auto;
+}
+.search-control {
+    padding: 5px 10px;
+}
 
 /*
  * Connectors
