--- a/utilities/database-tool/public/views/main.html
+++ b/utilities/database-tool/public/views/main.html
@@ -7,9 +7,9 @@
         </div>
         <p/>
         <div class="row">
-            <div class="col-md-6">
+            <!-- <div class="col-md-6">
                 <button type="button" class="btn btn-primary" ng-click="createTestDiagram()">Create Test Diagram</button>
-            </div>
+            </div> -->
         </div>
         <hr>
         <div class="row">
