--- a/studio/public/stylesheets/site.css
+++ b/studio/public/stylesheets/site.css
@@ -24,15 +24,21 @@ body {
 .navbar {
     background-color: #f5f5f5;
     border: 0;
+    margin: 0;
 }
 
 .navbar-btn-text {
     margin: 0 5px 0 5px;
 }
 
+#studio-controls { position: absolute; top: 70px; right: 20px; box-shadow: 0px 6px 12px rgba(0,0,0,0.125); }
+
 #studio-canvas {
     overflow-y: scroll;
     height: 100%;
+    height: -webkit-calc(100% - 50px);
+    height: -moz-calc(100% - 50px);
+    height: calc(100% - 50px);
 }
 
 #studio-wrapper.show-nav {
